2009-07-14  Jan Urbanski  <jurbanski@flumotion.com>

	* doc/random/http-ondemand-rendering.rst:
	Fix typos, add some RST formatting.

2009-07-14  Jan Urbanski  <jurbanski@flumotion.com>

	* doc/random/http-ondemand-rendering.rst (added):
	Add documentation explaining how the http-ondemand component renders
	requests.

2009-07-14  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/common/errors.py:
	Extend the NoProjectError exception to include additional debug
	message.

	* flumotion/project/project.py:
	Include an additional debug message when raising NoProjectError.
	Fixes #955.

2009-07-13  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/httpserver/cachedprovider.py:
	Fix debug message that prints cache size in bytes and claims it's in
	megabytes.

2009-07-08  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Julien

	* flumotion/admin/admin.py:
	Make the connection to fail when it's the first time we're connecting
	and stop trying to reconnect.
	Show an useful error message when the connection failed because the
	manager is not using a secure connection (only plain TCP)

	* flumotion/admin/gtk/adminwindow.py:
	Don't quit the application only because the reconnection failed and
	let the model to keep trying to connect.
	Set the window un/sensitive when we are dis/connected and only allow
	to connect to a manager.

	* flumotion/admin/gtk/configurationassistant.py:
	Be aware of the dis/connection to manager and make the assistant
	un/sensitive accordingly.

	* flumotion/admin/gtk/main.py:
	Show the greeter and don't fail cowardly when the connection to the
	manager specified through command line doesn't succeed.
	Fixes #1252, #1315 and #1163


2009-07-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/porter/porter.py:
	Make the porter output two \r\n sequences when returning a Service
	Unavailable response, and a short explanatory text. This mimicks more